#
# bgpcorsaro
#
# Chiara Orsini, CAIDA, UC San Diego
# bgpstream-info@caida.org
#
# Copyright (C) 2015 The Regents of the University of California.
#
# This file is part of bgpcorsaro.
#
# bgpcorsaro is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# bgpcorsaro is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with bgpcorsaro.  If not, see <http://www.gnu.org/licenses/>.
#

AM_CPPFLAGS = -I$(top_srcdir)/common

noinst_LTLIBRARIES = libroutingtables.la

libroutingtables_la_SOURCES = 	routingtables.h         \
				routingtables_int.h     \
				routingtables.c         \
				routingtables_metrics.c      

# libroutingtables_la_LIBADD =

ACLOCAL_AMFLAGS = -I m4

CLEANFILES = *~

